Bug 59616 - CRASH when FILEOPEN particular .svm image
Summary: CRASH when FILEOPEN particular .svm image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: BSA target:4.1.0 target:4.0.1 target:...
Keywords: regression
: 52625 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-20 10:25 UTC by Rpnpif
Modified: 2013-11-17 16:59 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The image that crashes LO (159.68 KB, image/x-svm)
2013-01-20 10:25 UTC, Rpnpif
Details
bt + console logs on master (19.47 KB, text/plain)
2013-01-20 13:48 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rpnpif 2013-01-20 10:25:10 UTC
Created attachment 73324 [details]
The image that crashes LO

Problem description: 

Open 200005D6000015CE00001A3E5EC366E5.svm image makes always crashed LO, but OpenOffice 3.3.0 works fine.

Same issue with LO Impress when this image is in a odp document.
This issue was first found with an Impress document crash. 200005D6000015CE00001A3E5EC366E5.svm has some problem in it but it is not a reason for crashing.

Current behavior:
Always crashes with this image.

              
Operating System: Linux (Other)
Version: 3.5.4 release
Last worked in: 3.3.0 release
Comment 1 Julien Nabet 2013-01-20 13:48:08 UTC
Created attachment 73327 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today, I reproduced the crash.
I attached bt + console logs.

I've seen this bt recently but don't remember for which fdo.
Comment 2 Julien Nabet 2013-01-20 13:49:04 UTC
Thorsten/Radek: bt attached, one for you?
Comment 3 Rainer Bielefeld Retired 2013-01-20 15:34:33 UTC
Still [Reproducible] with server  installation of  "LOdev  4.0.0.1+   -  ENGLISH UI / German Locale  [Build ID:  072fc07107e9849ed7050d18575b42049db9657)]"  {tinderbox: Win-x86@6, pull time 2013-01-16 09:31:57} on German WIN7 Home Premium (64bit) with own separate User Profile

Already [Reproducible] with 
* Server Installation (own profile) of "LibreOffice 3.4.5 RC1  - WIN7 Home Premium (64bit) English UI [Build ID: OOO340m1 (Build:501)]"
* Server Installation of "LibreOffice 3.3.3  English UI/ German Locale [OOO330m19 (Build:301) tag libreoffice-3.3.3.1] on German WIN7 Home Premium (64bit) 
* "LibreOffice Portable 3.3.0  - WIN7  Home Premium (64bit) German UI
[OOO330m19 (Build:6) tag libreoffice-3.3.0.4]"                                !!
* AOOo 3.4.0

Worked fine with OOo 3.1.1

@Rpnpif
If you can reproduce your "Works for me" with LibO 3.3.0 that would indicate that under WIN we have an additional problem compared to Linux!
Comment 4 Rainer Bielefeld Retired 2013-01-20 17:47:30 UTC
If comparison of crash reports is not clear enough (I can't check, such a report tells me nothing):

@Joel:
Can you please send sample document for "Bug 49784 - FILEOPEN LibO crash with document containing .svm pictures " to me and Julien Nabet? We should check relation to that bug.
Comment 5 Julien Nabet 2013-01-20 17:59:52 UTC
Just comparing the bts, could be a dup of 52625 (I put it as see also)
Comment 6 Rainer Bielefeld Retired 2013-01-20 18:55:49 UTC
I did a quick test with the confidential sample document for Bug 49784, crashes exactly the same (A)OOo and LibO versions as sample here, what underpins Julien's suspect of a relation after bt comparison.
Comment 7 Rpnpif 2013-01-20 20:28:02 UTC
@Rainer
It was OOo 3.3.0 which worked fine. I have not LibO 3.3.0 on the hand.
Comment 8 Julien Nabet 2013-01-20 20:34:13 UTC
Rainer: after having retrieved bt for this tracker, fdo52625 and fdo49784, the 2 first seem the same cause (perhaps dup) but the third has a completely different bt.
Comment 9 Joel Madero 2013-01-20 20:41:55 UTC
Can we take out NEEDINFO keyword?
Comment 10 Julien Nabet 2013-01-20 20:47:30 UTC
Done. I think it was just a remnant of NEEDINFO status vs NEEDINFO keyword
(Hope I'm not wrong :-))
Comment 11 Rainer Bielefeld Retired 2013-01-20 21:41:34 UTC
Argh, Juliens suspect was concerning Bug 52625, not Bug 49784

@Joel
Yes -Needinfo ok, reporter answered. Comment 7 does not match with my WIN results, but let's check that when we have a fix.

@Julien:
I think we should make Bug 52625 a DUP of this one and check when we have a fix here whether we were right. Do you agree?

I believe no more info is required for starting bugfix.
Comment 12 Julien Nabet 2013-01-20 21:43:53 UTC
*** Bug 52625 has been marked as a duplicate of this bug. ***
Comment 13 Alex Thurgood 2013-01-21 09:49:22 UTC
Nothing to do with removal of the binary filters by any chance ?


Alex
Comment 14 Thorsten Behrens (allotropia) 2013-01-21 12:24:30 UTC
nope. off-by-one in bitmap transformation. looking into it.
Comment 15 Not Assigned 2013-01-23 10:49:51 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1669188e2832cf0cc1caf111f70aff7ba17757a

Fix fdo#59616 - ensure BitmapEx has same-sized subbitmaps



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Thorsten Behrens (allotropia) 2013-01-23 10:51:33 UTC
fixed in master, reviews for -4-0 etc in progress.
Comment 17 Rpnpif 2013-01-23 16:01:16 UTC
Thank you very much for your great speed to fix this issue.
Regards.
Comment 18 Not Assigned 2013-01-23 19:48:54 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fbdd9b181e59a0510fc5e7dcb56fac8e0dc6bb8f&h=libreoffice-4-0

Fix fdo#59616 - ensure BitmapEx has same-sized subbitmaps


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Not Assigned 2013-01-24 11:55:38 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f03352a1c98d150d7954b8684498f834dd67e036&h=libreoffice-3-6

Fix fdo#59616 - ensure BitmapEx has same-sized subbitmaps


It will be available in LibreOffice 3.6.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.