Fix fdo#59616 - ensure BitmapEx has same-sized subbitmaps

Lots of code relies on the fact that the two bitmaps inside a
BitmapEx actually have the same size. Enforce that convention during
import.

Change-Id: I436ccc33b06c627cd6347747d22c24bfaf7ca932
Reviewed-on: https://gerrit.libreoffice.org/1822
Reviewed-by: Radek Doulík <rodo@novell.com>
Tested-by: Radek Doulík <rodo@novell.com>